--- a/about.css
+++ b/about.css
@@ -697,6 +697,9 @@ button{
         width: 30px;
         height: 30px;
     }
+      .header h1{
+        font-size: 30px;
+    }
 }
 @media screen and (max-width: 780px) {
     body{
