--- a/about.css
+++ b/about.css
@@ -230,7 +230,7 @@ padding-top: 1rem;
   }
 .nine-box{
     border: 1px solid rgb(54, 54, 54);
-    box-shadow: 0 0 5px 5px rgb(0, 0, 0) ;
+    box-shadow: 0 0 2px  rgb(255, 0, 0) ;
     display: flex;
     justify-content: space-between;
     padding-right: 5rem;
@@ -329,7 +329,7 @@ margin-left: -25px;
 }
 .six-skills{
     border: 1px solid rgb(54, 54, 54);
-    box-shadow: 0 0 5px 5px rgb(0, 0, 0) ;
+    box-shadow: 0 0 2px  rgb(255, 0, 0) ;
     display: flex;
  align-items: center;
     justify-content: center;
@@ -383,7 +383,7 @@ margin-left: -25px;
 }
 .four-add{
     border: 1px solid rgb(54, 54, 54);
-    box-shadow: 0 0 5px 5px rgb(0, 0, 0) ;
+    box-shadow: 0 0 2px  rgb(255, 0, 0) ;
     display: flex;
     justify-content: space-evenly;
     padding: 20px;
@@ -480,7 +480,7 @@ form {
     color: white;
  
     outline: none;
-    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.1);
+ 
 }
 
 input, textarea {
@@ -494,13 +494,15 @@ background: transparent;
     animation-range: entry 30% cover 40%;
     outline: none;
     resize: none;
-    box-shadow: 0px 10px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 1px  red;
+   
     
     
 }
 
 textarea {
     height: 200px;
+    box-shadow: 0 0 2px  red;
 }
 button{
     background-color: red;
@@ -515,7 +517,7 @@ button{
     animation: appear 5s linear;
     animation-timeline:view();
     animation-range: entry 30% cover 40%;
-
+   
   }
   .button-con{
     display: flex;
@@ -564,6 +566,7 @@ button{
     animation: appear 5s linear;
     animation-timeline:view();
     animation-range: entry 30% cover 40%;
+    box-shadow: 0 0  1px rgb(255, 0, 0);
 }
 .pro1{
     background-image: url(firstproject.png);
